--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
 
       - name: Install npm dependencies
         run: yarn install
@@ -19,3 +23,8 @@ jobs:
         with:
           name: release
           path: android/app/build/outputs/apk/release/app-release.apk
+
+      - name: Generate release
+        run: npm publish
+        # env:
+        #   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
