--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
 
       - name: Install npm dependencies
         run: yarn install
@@ -23,8 +19,20 @@ jobs:
         with:
           name: release
           path: android/app/build/outputs/apk/release/app-release.apk
-
-      - name: Generate release
-        run: npm publish
-        # env:
-        #   NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          
+  publish-gpr:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
+#       - run: npm ci
+      - run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
