--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
 #       - run: npm ci
-      - run: npm publish
+      - name: Publish package to NPM 📦
+        run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
